添加数个算法实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".collection.CollectionActivity"></activity>
+        <activity android:name=".collection.CollectionActivity" />
+        <activity android:name=".test.TestActivity"></activity>
     </application>
 
 </manifest>
