修改部分文件，添加测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".collection.CollectionActivity" />
-        <activity android:name=".test.TestActivity"></activity>
+        <activity android:name=".test.TestActivity" />
+        <activity android:name=".eventbus.OneActivity" />
+        <activity android:name=".eventbus.TwoActivity"></activity>
     </application>
 
 </manifest>
